examples/test/testpolicy10659.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10659
  namespace: namespace289
spec:
  podSelector:
    matchLabels:
      key4: value1
      key46: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value43
      podSelector:
        matchLabels:
          key36: value4
          key44: value27
